--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
             <scope>provided</scope>
         </dependency>
         
-         <!-- GWTP -->
-         <!-- https://mvnrepository.com/artifact/com.gwtplatform/gwtp-mvp-client -->
+        <!-- GWTP -->
+        <!-- https://mvnrepository.com/artifact/com.gwtplatform/gwtp-mvp-client -->
         <dependency>
             <groupId>com.gwtplatform</groupId>
             <artifactId>gwtp-mvp-client</artifactId>
@@ -90,6 +90,13 @@
             <artifactId>gwt-material</artifactId>
             <version>2.0.1</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.vectomatic/lib-gwt-file -->
+<!--        <dependency>
+            <groupId>org.vectomatic</groupId>
+            <artifactId>lib-gwt-file</artifactId>
+            <version>0.3.9</version>
+        </dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
