--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
             <scope>provided</scope>
         </dependency>
         
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>org.realityforge.gwt.websockets</groupId>
             <artifactId>gwt-websockets</artifactId>
             <version>1.2</version>
@@ -85,11 +85,11 @@
             <scope>provided</scope>
         </dependency>
         
-        <dependency>
+<!--        <dependency>
             <groupId>com.github.gwtmaterialdesign</groupId>
             <artifactId>gwt-material</artifactId>
             <version>2.0.1</version>
-        </dependency>
+        </dependency>-->
         
         <!-- https://mvnrepository.com/artifact/org.vectomatic/lib-gwt-file -->
         <dependency>
@@ -97,7 +97,7 @@
             <artifactId>lib-gwt-file</artifactId>
             <version>0.3.9</version>
         </dependency>
-
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -126,6 +126,9 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-Xlint:unchecked</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             
