--- a/logging.properties
+++ b/logging.properties
@@ -45,4 +45,5 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 # Provides extra control for each logger.
 ############################################################
 #com.bsteele.bsteeleMusicApp.server.BSteeleMusicAppServer = FINE
-com.bsteele.bsteeleMusicApp.client.application.BSteeleMusicIO=FINE
+#com.bsteele.bsteeleMusicApp.client.application.BSteeleMusicIO=FINE
+com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsView =FINE
