--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,12 @@
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>1.3.1</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
             
         </plugins>
     </build>
