--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.gwtplatform</groupId>
             <artifactId>gwtp-mvp-client</artifactId>
-            <version>1.6</version>
+            <version>RELEASE</version>
             <scope>provided</scope>
         </dependency>
 
