--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.0</version>
+                <configuration>
+                    <show>private</show>
+                </configuration>
             </plugin>
             
         </plugins>
