--- a/logging.properties
+++ b/logging.properties
@@ -50,3 +50,4 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl =FINE
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINE
 com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINE
+com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINE
