--- a/logging.properties
+++ b/logging.properties
@@ -47,7 +47,7 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 #   -Djava.util.logging.config.file=logging.properties
 #com.bsteele.bsteeleMusicApp.server.BSteeleMusicAppServer = FINE
 #com.bsteele.bsteeleMusicApp.client.application.BSteeleMusicIO=FINE
-#com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl =FINE
-#com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINE
-com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINE
-com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINE
+#com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl=FINEST
+#com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINEST
