--- a/logging.properties
+++ b/logging.properties
@@ -51,4 +51,5 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl=FINEST
 com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
-com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINER
+#com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINER
+com.bsteele.bsteeleMusicApp.shared.songs.SongEditTest.level=FINEST
