--- a/logging.properties
+++ b/logging.properties
@@ -54,7 +54,7 @@ com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEditTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
-#com.bsteele.bsteeleMusicApp.client.songs.SongTest.level=FINEST
+com.bsteele.bsteeleMusicApp.client.songs.SongTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.KeyTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSection.level=FINE
 com.bsteele.bsteeleMusicApp.shared.songs.ChordSectionTest.level=FINE
