--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.ltgt.gwt.maven/gwt-maven-plugin -->
+        <dependency>
+            <groupId>net.ltgt.gwt.maven</groupId>
+            <artifactId>gwt-maven-plugin</artifactId>
+            <version>1.0-rc-10</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-websocket-api -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -119,7 +126,7 @@
             <plugin>
                 <groupId>net.ltgt.gwt.maven</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>1.0-rc-9</version>
+                <version>1.0-rc-10</version>
                 <executions>
                     <execution>
                         <goals>
@@ -137,7 +144,7 @@
                     <sourceLevel>1.8</sourceLevel>
                     <!-- Compiler configuration -->
                     <!--                    <compilerArgs>
-                         Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) 
+                         Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile)
                         <arg>-compileReport</arg>
                         <arg>-XcompilerMetrics</arg>
                     </compilerArgs>-->
