--- a/logging.properties
+++ b/logging.properties
@@ -39,7 +39,10 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 # to print one-line log message like this:
 #     <level>: <log message> [<date/time>]
 #
-java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$s %6$s%n
+#linux:
+# java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$s %6$s%n
+#mac:
+java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-60s, %2$s %6$s%n
 ############################################################
 # Facility specific properties.
 # Provides extra control for each logger.
