--- a/logging.properties
+++ b/logging.properties
@@ -54,8 +54,8 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-60s, %2$s
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.LyricsAndChordsViewImpl=FINEST
 #com.bsteele.bsteeleMusicApp.client.presenterWidgets.SongEditView=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongBaseTest.level=FINEST
-com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINEST
-com.bsteele.bsteeleMusicApp.shared.songs.MeasureRepeatTest.level=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.SongBase.level=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.MeasureRepeatTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEditTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.SongEntryTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.client.songs.SongTest.level=FINE
@@ -63,4 +63,5 @@ com.bsteele.bsteeleMusicApp.shared.songs.MeasureRepeatTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSection.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSectionTest.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.SongPlayerTest.level=FINE
+com.bsteele.bsteeleMusicApp.shared.songs.ChordTest.level=FINE
 
