--- a/logging.properties
+++ b/logging.properties
@@ -60,6 +60,6 @@ java.util.logging.SimpleFormatter.format=%1$tM:%1$tS.%1$tL %4$-7s: %5$-120s, %2$
 #com.bsteele.bsteeleMusicApp.shared.songs.KeyTest.level=FINEST
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSection.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordSectionTest.level=FINE
-com.bsteele.bsteeleMusicApp.shared.songs.SongPlayerTest.level=FINEST
+#com.bsteele.bsteeleMusicApp.shared.songs.SongPlayerTest.level=FINE
 #com.bsteele.bsteeleMusicApp.shared.songs.ChordTest.level=FINE
 
