--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
+                    <source>8</source>
                     <show>private</show>
                 </configuration>
             </plugin>
